# vdiff

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRODUCTION_DEFECTS_REPORT.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yaml  ci.yml  release.yaml  security.yaml
benchmarks/: __init__.py  benchmark_cpu.py  benchmark_ttft.py  run_benchmark.py
deploy/docker/: Dockerfile  Dockerfile.dev
deploy/grafana/: vdiff-dashboard.json
deploy/helm/vdiff/: Chart.yaml  values.yaml
deploy/helm/vdiff/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  route.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/kubernetes/: build-config.yaml  comprehensive-llm-test.yaml  dev-pod.yaml  gpu-benchmark-deployment.yaml  hybrid-test-deployment.yaml  ocp-test-deployment.yaml  qa-full-test-suite.yaml  server-deployment.yaml  solid-test-deployment.yaml  test-deployment.yaml
deploy/kubernetes/kserve/: inference-service.yaml  serving-runtime.yaml
deploy/kubernetes/llmd/: deployment.yaml  inference-pool.yaml  service.yaml
deploy/kubernetes/standalone/: deployment.yaml  tinyllama-initcontainer.yaml  tinyllama-pip-deploy.yaml  tinyllama-simple.yaml
dfastllm/: __init__.py  cli.py  config.py  version.py
dfastllm/engine/: __init__.py  adaptive_steps.py  apd.py  attention_cache.py  base.py  continuous_batching.py  dfastllm_engine.py  diffusion_sampler.py  entropy_controller.py  hybrid_engine.py  mor_decoder.py  outputs.py  quantization.py  request_queue.py  sampling_params.py  tokenizer.py
dfastllm/entrypoints/: __init__.py  launcher.py
dfastllm/entrypoints/openai/: __init__.py  api_server.py  protocol.py  serving_chat.py  serving_completion.py
dfastllm/metrics/: __init__.py  prometheus.py
dfastllm/tests/: test_optimizations.py
docker/: Dockerfile  Dockerfile.ocp  Dockerfile.ocp-simple  Dockerfile.slim  Dockerfile.vllm  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLUSTER_TEST_REPORT.md  COMPARISON.md  DEPLOYMENT_GUIDE.md  ENV_VARIABLES.md  MOR_GUIDE.md  PERFORMANCE_TUNING.md  QUICK_START.md  ROADMAP.md  TEST_REPORT.md  TEST_REPORT_CONSOLIDATED.md  TTFT_OPTIMIZATION.md  USER_GUIDE.md  api-reference.md  configuration.md  getting-started.md  index.md  installation.md  llada-token-flow.md  vllm-compatibility.md
docs/deployment/: docker.md  kserve.md  llmd.md
docs/design/: HLD.md  LLD.md  README.md
docs/dev-doc/: 01-concepts.md  02-architecture.md  03-project-structure.md  04-engine.md  05-diffusion.md  06-apd.md  07-api-server.md  08-config.md  09-deployment.md  10-code-walkthrough.md  index.md
examples/: benchmark.py  client_openai.py  client_requests.py  diffusion_demo.py  hybrid_demo.py  inference_pipeline.py  quickstart.py
report/: E2E_QA_TEST_REPORT.md  FINAL_BENCHMARK_RESULTS.md  MOR_GPU_TEST_REPORT.md  PERFORMANCE_COMPARISON.md  PRODUCTION_DEFECTS_REPORT.md  QA_TEST_REPORT.json  benchmark_results.json  framework_comparison.py  framework_comparison_results.json  gpu_production_test.py  phi2_benchmark_results.json  production_test_results.json  production_test_results_v2.json  run_comprehensive_tests.py
scripts/: build.sh  deploy-tinyllama-ocp.sh  dev.sh  download_model.py  lint.sh  test.sh  test_local.py  test_on_cluster.sh
tests/: QA_TEST_PLAN.md  __init__.py  conftest.py  run_qa_tests.py  test_consolidated.py
tests/compatibility/: __init__.py  test_vllm_compat.py
tests/integration/: __init__.py  test_api_chat.py  test_api_completion.py  test_e2e.py  test_metrics.py
tests/unit/: __init__.py  test_api.py  test_continuous_batching.py  test_diffusion_sampler.py  test_engine.py  test_hybrid_engine.py  test_model_loader.py.skip  test_mor_decoder.py  test_protocol.py  test_sampling_params.py
vdiff/: __init__.py  config.py  version.py
vdiff/engine/: __init__.py  diffusion_sampler.py  outputs.py  request_queue.py  sampling_params.py  tokenizer.py  vdiff_engine.py
vdiff/entrypoints/: __init__.py  launcher.py
vdiff/entrypoints/openai/: __init__.py  api_server.py  protocol.py  serving_chat.py  serving_completion.py
vdiff/metrics/: __init__.py
