[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfastllm"
version = "2.0.0"
description = "Production-ready inference server for Diffusion Language Models"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "dfastllm Team", email = "dfastllm@example.com"}
]
maintainers = [
    {name = "dfastllm Team", email = "dfastllm@example.com"}
]
keywords = [
    "llm",
    "diffusion",
    "serving",
    "inference",
    "llada",
    "dream",
    "mdlm",
    "dfastllm",
    "kubernetes",
    "kserve",
    "production",
    "openai-api",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "safetensors>=0.4.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "prometheus-client>=0.19.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "types-requests>=2.31.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
monitoring = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
]
all = [
    "dfastllm[dev,docs,monitoring]",
]

[project.urls]
Homepage = "https://github.com/mwaykole/dfastllm"
Documentation = "https://mwaykole.github.io/dfastllm"
Repository = "https://github.com/mwaykole/dfastllm"
Issues = "https://github.com/mwaykole/dfastllm/issues"
Changelog = "https://github.com/mwaykole/dfastllm/blob/main/CHANGELOG.md"

[project.scripts]
dfastllm = "dfastllm.entrypoints.openai.api_server:main"
dfastllm-server = "dfastllm.entrypoints.openai.api_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dfastllm*"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "S101",  # assert used
    "S104",  # possible binding to all interfaces
]

[tool.ruff.isort]
known-first-party = ["vdiff"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011", "S101", "T201"]
"scripts/*" = ["T201"]
"examples/*" = ["T201"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = false
exclude = [
    "build",
    "dist",
    "venv",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 300
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
    "unit: marks unit tests",
]

[tool.coverage.run]
source = ["vdiff"]
branch = true
omit = [
    "tests/*",
    "vdiff/__init__.py",
    "vdiff/version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "class.*Protocol",
    "@abstractmethod",
]
fail_under = 70
show_missing = true
